Removes red underline of links; links are now blue when hovered. This fixes the jumping on the home page

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -32,6 +32,7 @@ a {
   &:focus,
   &:hover {
     text-decoration: underline;
+    color: #3030ff;
   }
 }
 
@@ -448,33 +449,6 @@ img {
 a {
   position: relative;
   transition: 0.5s;
-}
-
-a:before, a:after {
-  position: absolute;
-  bottom: -2px;
-  content: "";
-  display: inline-block;
-  width: 0;
-  height: 2px;
-  background: #F30034;
-  transition: 0.5s;
-}
-
-a:before {
-  left: 50%;
-}
-
-a:after {
-  right: 50%;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-a:hover:before, a:hover:after {
-  width: 50%;
 }
 
 .private {
